# tommy-gilligan.github.io

./: .gitignore  .mailmap  Cargo.toml  README.html  README.md  build.rs  ci.yml  hello.md  index.html  style.css  tags  zsh-tip.md
.cargo/: config.toml
.github/workflows/: check_for_unused_dependencies.yml  ci.yml
articles/: autofetch.md  conflict-resolution.md  driver-acceptance.html  driver-acceptance.md  force-pushing.md  git-config.md  hash-transition.md  mailmap.md  search.md  yaml-reuse.md  zsh-tip.html  zsh-tip.md
assets/: index.html  style.css
crawl/: Cargo.toml
crawl/src/: main.rs
generate/: Cargo.toml
generate/src/: articles.rs  feed.rs  index.rs  main.rs
generation/: Cargo.toml
generation/src/: article.rs  author.rs  cache.rs  chrome_driver.rs  config.rs  crawl.rs  ditto.rs  favicon.rs  generate.rs  git.rs  github.rs  gravatar.rs  history.rs  index.rs  layout.rs  lib.rs  link_list.rs  output.rs  page.rs  serve.rs  social_link.rs  srcset.rs  style.rs  view.rs  xml.rs
generation/src/article/: frontmatter.rs
generation/src/output/: image.rs  sitemap.rs
pages/: git-config.md  zsh-tip.md
screenshot/: Cargo.toml
screenshot/src/: main.rs
serve/: Cargo.toml
serve/src/: main.rs
src/: chrome_driver.rs  config.rs  crawl.rs  generate.rs  index.rs  layout.css  layout.rs  link_list.rs  main.rs  markdown_options.rs  page.rs  picture.rs  prettier.rs  screenshot.rs  serve.rs  source_file.rs  style.css  style.rs  svg.rs  syntax_highlighting.rs  visual_diff.rs  watch.rs
src/layout/: frontmatter.rs  markdown_options.rs
src/page/: frontmatter.rs
src/source_file/: frontmatter.rs
templates/: layout.html
tests/: audit.rs
toolkit/: Cargo.toml
toolkit/generation/src/: article.rs  crawl.rs  ditto.rs  gravatar.rs  lib.rs  markdown.rs  output.rs  tokiort.rs
toolkit/generation/src/article/: markdown_options.rs
toolkit/src/: article.rs  asset.rs  browser.rs  cache.rs  chrome_driver.rs  config.rs  crawl.rs  css.rs  favicon.rs  feed.rs  frontmatter.rs  git.rs  index.rs  layout.rs  lib.rs  locale.rs  markdown.rs  my_article.rs  output.rs  prettier.rs  rss.rs  serve.rs  shell.rs  sitemap.rs  sitemap.xsd  social_link.rs  srcset.rs  syntax_highlighting.rs  terminal.rs  tokiort.rs  view.rs  watch.rs  xml.rs
toolkit/src/article/: frontmatter.rs
toolkit/src/asset/: css.rs
toolkit/src/markdown/: options.rs
toolkit/src/output/: sitemap.rs
toolkit/tests/: clipping_test.rs
visual_diff/: Cargo.toml
visual_diff/src/: main.rs
watch/: Cargo.toml
xtask/: Cargo.toml  build.rs
xtask/src/: crawl.rs  generate.rs  main.rs  pre_commit.rs  pre_commit_hook.rs  screenshot.rs  serve.rs  visual_diff.rs  watch.rs
xtask/src/generate/: articles.rs  feed.rs  index.rs
