[workspace]
resolver = "2"
members = [
    "generation",
    "xtask",
    "crawl",
    "generate",
    "screenshot",
    "serve",
    "visual_diff",
    "watch",
]

[workspace.dependencies]
base64 = ">=0.21.2"
build-time = "0.1.3"
chrono = { version = "0.4.26", default-features = false, features = [ "std", "clock", "unstable-locales" ] }
clap = { version = "4.4.0", features = [ "wrap_help", "unstable-v5", "suggestions", "env", "cargo", "derive" ] }
futures = "0.3.28"
futures-util = "0.3.28"
git-version = "0.3.5"
git2 = "0.17.2"
hyper = { version = "1.0.0-rc.4", features = [ "full" ] }
hyper-staticfile = "0.10.0-alpha.7"
image = "0.24.7"
lightningcss = "1.0.0-alpha.44"
markdown = "1.0.0-alpha.11"
markup = "0.13.1"
md5 = "0.7.0"
notify = "6.0.1"
ordinal = "0.3.1"
pin-project-lite="0.2.12"
regex = "1.9.1"
reqwest = "0.11"
rss = "2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = ">0.1"
serde_with = "2.2.0"
site_map = { package = "sitemap", version = ">= 0.4" }
sitemap = ">= 0.4"
thirtyfour = "0.32.0-rc.8"
tl = "0.7.7"
tokio = { version = "1.29.1", features = [ "full" ] }
toml = "0.5.10"
toml-datetime-compat = { version = "0.2.0", features = [ "chrono", "serde_with" ] }
traversal = "0.1.2"
url = "2.4.0"
viuer = "0.6.2"
