[package]
name = "generate"
version = "0.1.0"
edition = "2021"

[dependencies]
build-time.workspace = true
clap.workspace = true
git-version.workspace = true
git2.workspace = true
hyper-staticfile.workspace = true
hyper.workspace = true
markdown.workspace = true
markup.workspace = true
reqwest.workspace = true
rss.workspace = true
sitemap.workspace = true
tl.workspace = true
tokio.workspace = true
traversal.workspace = true
url.workspace = true
generation = { path = "../generation" }
