[package]
name = "generation"
description = "my blog"
authors = [ "Tommy Gilligan" ]
repository = "git@github.com:tomgilligan/tomgilligan.github.io.git"
homepage = "https://tomgilligan.github.io/abc.htm?ab=1"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = ">=0.21.2"
build-time = "0.1.3"
chrono = { version = "0.4.26", default-features = false, features = [ "std", "clock" ] }
git-version = "0.3.5"
git2 = "0.17.2"
hyper = { version = "0.14.27", features = [ "full" ] }
hyper-staticfile = "0.9.5"
lightningcss = "1.0.0-alpha.44"
markdown = "1.0.0-alpha.11"
markup = "0.13.1"
regex = "1.9.1"
rss = "2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = ">0.1"
sitemap = ">= 0.4"
syntect = "5.0.0"
thirtyfour = "0.32.0-rc.8"
tokio = { version = "1.29.1", features = [ "full" ] }
toml = ">= 0.7.6"
toml-datetime-compat = { version = "0.2.0", features = [ "chrono", "serde_with" ] }
url = "2.4.0"
viuer = { version = "0.6.2" }
notify = "6.0.1"
md5 = "0.7.0"
ordinal = "0.3.1"
