[package]
name = "screenshot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
git2.workspace = true
hyper-staticfile.workspace = true
hyper.workspace = true
markdown.workspace = true
markup.workspace = true
reqwest.workspace = true
sitemap.workspace = true
tl.workspace = true
tokio.workspace = true
traversal.workspace = true
url.workspace = true
toolkit = { path = "../toolkit" }
