[package]
name = "toolkit"
authors = [ "Tommy Gilligan" ]
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
build-time.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
futures.workspace = true
git-version.workspace = true
git2.workspace = true
hyper-staticfile.workspace = true
hyper.workspace = true
image.workspace = true
libxml = "0.3.3"
lightningcss.workspace = true
markdown.workspace = true
markup.workspace = true
notify.workspace = true
pin-project-lite="0.2.12"
regex.workspace = true
reqwest.workspace = true
rss.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
site_map.workspace = true
thirtyfour.workspace = true
tl.workspace = true
tokio.workspace = true
toml-datetime-compat.workspace = true
toml.workspace = true
traversal.workspace = true
url.workspace = true
viuer.workspace = true
tree-sitter-highlight = "0.20.1"
tree-sitter-rust = "0.20.4"
tree-sitter-bash = "0.20.3"
gag = "1.0.0"

[dev-dependencies]
indoc = "2.0.3"
