[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
default-run = "xtask"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap.git", features = [ "wrap_help", "unstable-v5", "suggestions", "env", "cargo", "derive" ] }
generation = { path = "../generation" }
url = "2.4.0"
sitemap = ">= 0.4"
hyper = { version = "0.14.27", features = [ "full" ] }
hyper-staticfile = "0.9.5"
tokio = { version = "1.29.1", features = [ "full" ] }
notify = "6.0.1"
viuer = { version = "0.6.2" }
git2 = "0.17.2"
tl = "0.7.7"
reqwest = { version = "0.11" }
markdown = "1.0.0-alpha.11"
markup = "0.13.1"
