[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
default-run = "xtask"
autobins = false

[[bin]]
name = "flatten_yaml"

[[bin]]
name = "xtask"

[[bin]]
name = "pre-commit"
path = "src/bin/xtask.rs"

[dependencies]
git2.workspace = true
url.workspace = true
serde.workspace = true
serde_yaml.workspace = true
